# cptv

./: .editorconfig  .gitignore  .htmlhintrc  .jscpd.json  .markdownlint.yaml  .pylintrc  .textlintrc.json  AGENTS.md  CLAUDE.md  Containerfile  PLAN.md  README.md  SECURITY.md  eslint.config.js  lighthouserc.json  package-lock.json  package.json  pyproject.toml  taplo.toml
.github/: dependabot.yml
.github/actions/build-push-image/: action.yml
.github/workflows/: geolite2-refresh.yml  lint.yml  release.yml  scorecard.yml  security.yml  test.yml
cptv/: __init__.py  config.py  main.py  middleware.py  negotiation.py
cptv/routes/: asn.py  dns.py  geoip.py  health.py  help.py  index.py  ip.py  protocol.py  rdns.py  timing.py  traceroute.py
cptv/services/: asn.py  clock.py  dns.py  geoip.py  ip.py  protocol.py  rdns.py  redirect_origin.py  timing.py  traceroute.py  valkey.py
cptv/static/: app.css  app.js
cptv/templates/: _hop_row.html  base.html  details.html  help.html  index.html  ip.html  section_stub.html  traceroute.html
scripts/: build-assets.mjs  download-geolite2.sh
tests/: conftest.py
tests/integration/: test_footer_version.py  test_health.py  test_ip_endpoints.py  test_negotiation.py  test_new_endpoints.py  test_protocol_endpoint.py  test_rdns_endpoint.py  test_subdomain_routing.py  test_timing_endpoint.py  test_traceroute.py
tests/unit/: test_asn_service.py  test_clock_service.py  test_dns_service.py  test_geoip_service.py  test_ip_service.py  test_protocol_service.py  test_rdns_service.py  test_timing_service.py  test_traceroute_service.py
